# memepoke-reloaded

./: .gitignore  Makefile  README.md  apitest.py  saved html - scratch
Backend/: Cargo.toml
Backend/src/: main.rs
Frontend/: Cargo.toml  index.html
Frontend/planning/page mockups/: credit_page.html  meme_page.html  poke_page.html  start_test.html
Frontend/src/: api.rs  login.rs  main.rs  memepoke.rs  user.rs  utils.rs
Frontend/src/pages/: error.rs  memepoke.rs
css/: memepoke.css
page mockups/: credit_page.html
planning/: Networking.drawio  Page Navigation.drawio
src/: main.rs  user.rs
src/pages/: about.rs  error.rs  login.rs  meme.rs  memepoke.rs  poke.rs  welcome.rs
src/structs/: meme.rs  user.rs
