[package]
name = "Backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3", features = ["openssl"]}
serde = "1"
env_logger = "0.9.0"
actix-files = "0.5.0"
awc = "2.0.3"
serde_json = "1.0"

# speed up final build
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
